--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,51 @@
   to {
     transform: rotate(360deg);
   }
+}
+ */
+
+ .div_border{
+   background-color: gray;
+   border: 1px solid white;
+   color: white;
+   width: 50%;
+   text-align: center;
+
+ }
+
+ .div_border p{
+   border-top: 1px solid white;
+   font-size: 30px;
+   font-weight: bold;
+ }
+
+.div_border button{
+  display: flex;
+  margin-left: 80%;
+  
+}
+ .answer{
+   border: 1px solid white;
+ }
+
+ .one{
+   background-color: gray;
+   width: 50%;
+   text-align: center;
+ }
+
+ .one button{
+   padding: 5%;
+   margin: 3%;
+ }
+ 
+.why{
+  width: 50%;
+  background-color: gray;
+   border: 1px solid white;
+   color: white;
+   width: 50%;
+   text-align: center;
+
+
 }
